// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`branded email templates buildInviteEmail escapes markup in every caller-supplied field: html 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Project invitation</title>
  </head>
  <body style="margin:0;padding:0;background-color:#f1f5f9;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">&lt;script&gt;alert(1)&lt;/script&gt; invited you to join &lt;img src=x onerror=alert(2)&gt; on Proyekto.</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#f1f5f9;padding:28px 12px;">
      <tr>
        <td align="center">
          <table width="600" cellpadding="0" cellspacing="0" role="presentation" style="width:600px;max-width:600px;background-color:#ffffff;border:1px solid #e2e8f0;border-radius:14px;overflow:hidden;">
            <tr>
              <td style="padding:26px 32px;background-color:#0f172a;">
                <p style="margin:0 0 14px;color:#93c5fd;font-size:12px;font-weight:700;letter-spacing:.08em;text-transform:uppercase;">Proyekto</p>
                <h1 style="margin:0 0 16px;color:#ffffff;font-size:28px;line-height:1.2;font-weight:700;">You are invited to collaborate</h1>
                <table cellpadding="0" cellspacing="0" role="presentation"><tr>
                  <td style="padding-right:12px;vertical-align:middle;"><span style="display:inline-block;width:44px;height:44px;border-radius:50%;background-color:#2563eb;color:#ffffff;font-size:20px;font-weight:700;line-height:44px;text-align:center;vertical-align:middle;">&lt;</span></td>
                  <td style="vertical-align:middle;">
                    <p style="margin:0;color:#cbd5e1;font-size:15px;line-height:1.5;">
                      <strong style="color:#ffffff;">&lt;script&gt;alert(1)&lt;/script&gt;</strong> invited you to join<br />
                      <strong style="color:#ffffff;">&lt;img src=x onerror=alert(2)&gt;</strong>.
                    </p>
                  </td>
                </tr></table>
              </td>
            </tr>
            <tr>
              <td style="padding:30px 32px;">
                <p style="margin:0 0 18px;color:#334155;font-size:15px;line-height:1.6;">
                  Open your invitation to review the project and start collaborating.
                </p>
                <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 22px;background-color:#f8fafc;border:1px solid #e2e8f0;border-radius:10px;">
                  <tr>
                    <td style="padding:16px 18px;">
                      <p style="margin:0 0 4px;color:#64748b;font-size:12px;font-weight:700;letter-spacing:.06em;text-transform:uppercase;">Project</p>
                      <p style="margin:0;color:#0f172a;font-size:16px;line-height:1.5;font-weight:700;">&lt;img src=x onerror=alert(2)&gt;</p>
                      
                      <p style="margin:14px 0 4px;color:#64748b;font-size:12px;font-weight:700;letter-spacing:.06em;text-transform:uppercase;">Role</p>
                      <p style="margin:0;color:#0f172a;font-size:15px;line-height:1.4;font-weight:600;">&quot;&gt;&lt;b&gt;bold&lt;/b&gt;</p>
      
                    </td>
                  </tr>
                </table>
                
                <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 22px;background-color:#eff6ff;border:1px solid #bfdbfe;border-radius:10px;">
                  <tr>
                    <td style="padding:14px 16px;">
                      <p style="margin:0 0 6px;color:#1e3a8a;font-size:12px;font-weight:700;letter-spacing:.06em;text-transform:uppercase;">Personal note</p>
                      <p style="margin:0;color:#1e293b;font-size:14px;line-height:1.6;">&lt;iframe src=&quot;evil&quot;&gt;&lt;/iframe&gt;</p>
                    </td>
                  </tr>
                </table>
      
                <div style="margin:30px 0;text-align:center;">
                  <a href="https://app.proyekto.test/freelancer/invites" style="display:inline-block;padding:14px 28px;background-color:#2563eb;color:#ffffff;font-size:15px;font-weight:700;text-decoration:none;border-radius:10px;">Open Invitation</a>
                </div>
                <p style="margin:0 0 12px;color:#475569;font-size:13px;line-height:1.6;">
                  If you do not have an account yet, sign up first with this email address and your invitation will be waiting for you.
                </p>
                <p style="margin:0 0 8px;color:#64748b;font-size:12px;line-height:1.5;">Button not working? Copy and paste this link:</p>
                <p style="margin:0;line-height:1.6;">
                  <a href="https://app.proyekto.test/freelancer/invites" style="color:#1d4ed8;font-size:12px;text-decoration:underline;word-break:break-all;">https://app.proyekto.test/freelancer/invites</a>
                </p>
              </td>
            </tr>
            <tr>
              <td style="padding:18px 24px;background-color:#f8fafc;border-top:1px solid #e2e8f0;text-align:center;">
                <p style="margin:0;color:#94a3b8;font-size:12px;line-height:1.5;">
                  You received this email because someone invited you to a project on Proyekto.
                </p>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>"
`;

exports[`branded email templates buildInviteEmail renders a full invitation: html 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Project invitation</title>
  </head>
  <body style="margin:0;padding:0;background-color:#f1f5f9;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Ada Lovelace invited you to join Analytical Engine on Proyekto.</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#f1f5f9;padding:28px 12px;">
      <tr>
        <td align="center">
          <table width="600" cellpadding="0" cellspacing="0" role="presentation" style="width:600px;max-width:600px;background-color:#ffffff;border:1px solid #e2e8f0;border-radius:14px;overflow:hidden;">
            <tr>
              <td style="padding:26px 32px;background-color:#0f172a;">
                <p style="margin:0 0 14px;color:#93c5fd;font-size:12px;font-weight:700;letter-spacing:.08em;text-transform:uppercase;">Proyekto</p>
                <h1 style="margin:0 0 16px;color:#ffffff;font-size:28px;line-height:1.2;font-weight:700;">You are invited to collaborate</h1>
                <table cellpadding="0" cellspacing="0" role="presentation"><tr>
                  <td style="padding-right:12px;vertical-align:middle;"><img src="https://cdn.proyekto.test/avatars/ada.png" width="44" height="44" alt="" style="display:inline-block;width:44px;height:44px;border-radius:50%;border:2px solid rgba(255,255,255,0.25);object-fit:cover;vertical-align:middle;" /></td>
                  <td style="vertical-align:middle;">
                    <p style="margin:0;color:#cbd5e1;font-size:15px;line-height:1.5;">
                      <strong style="color:#ffffff;">Ada Lovelace</strong> invited you to join<br />
                      <strong style="color:#ffffff;">Analytical Engine</strong>.
                    </p>
                  </td>
                </tr></table>
              </td>
            </tr>
            <tr>
              <td style="padding:30px 32px;">
                <p style="margin:0 0 18px;color:#334155;font-size:15px;line-height:1.6;">
                  Open your invitation to review the project and start collaborating.
                </p>
                <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 22px;background-color:#f8fafc;border:1px solid #e2e8f0;border-radius:10px;">
                  <tr>
                    <td style="padding:16px 18px;">
                      <p style="margin:0 0 4px;color:#64748b;font-size:12px;font-weight:700;letter-spacing:.06em;text-transform:uppercase;">Project</p>
                      <p style="margin:0;color:#0f172a;font-size:16px;line-height:1.5;font-weight:700;">Analytical Engine</p>
                      
                      <p style="margin:14px 0 4px;color:#64748b;font-size:12px;font-weight:700;letter-spacing:.06em;text-transform:uppercase;">Role</p>
                      <p style="margin:0;color:#0f172a;font-size:15px;line-height:1.4;font-weight:600;">Lead Engineer</p>
      
                    </td>
                  </tr>
                </table>
                
                <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 22px;background-color:#eff6ff;border:1px solid #bfdbfe;border-radius:10px;">
                  <tr>
                    <td style="padding:14px 16px;">
                      <p style="margin:0 0 6px;color:#1e3a8a;font-size:12px;font-weight:700;letter-spacing:.06em;text-transform:uppercase;">Personal note</p>
                      <p style="margin:0;color:#1e293b;font-size:14px;line-height:1.6;">Would love your help on the punch-card pipeline.</p>
                    </td>
                  </tr>
                </table>
      
                <div style="margin:30px 0;text-align:center;">
                  <a href="https://app.proyekto.test/freelancer/invites" style="display:inline-block;padding:14px 28px;background-color:#2563eb;color:#ffffff;font-size:15px;font-weight:700;text-decoration:none;border-radius:10px;">Open Invitation</a>
                </div>
                <p style="margin:0 0 12px;color:#475569;font-size:13px;line-height:1.6;">
                  If you do not have an account yet, sign up first with this email address and your invitation will be waiting for you.
                </p>
                <p style="margin:0 0 8px;color:#64748b;font-size:12px;line-height:1.5;">Button not working? Copy and paste this link:</p>
                <p style="margin:0;line-height:1.6;">
                  <a href="https://app.proyekto.test/freelancer/invites" style="color:#1d4ed8;font-size:12px;text-decoration:underline;word-break:break-all;">https://app.proyekto.test/freelancer/invites</a>
                </p>
              </td>
            </tr>
            <tr>
              <td style="padding:18px 24px;background-color:#f8fafc;border-top:1px solid #e2e8f0;text-align:center;">
                <p style="margin:0;color:#94a3b8;font-size:12px;line-height:1.5;">
                  You received this email because someone invited you to a project on Proyekto.
                </p>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>"
`;

exports[`branded email templates buildInviteEmail renders a full invitation: subject 1`] = `"Ada Lovelace invited you to collaborate on Analytical Engine"`;

exports[`branded email templates buildInviteEmail renders a full invitation: text 1`] = `
"Ada Lovelace invited you to collaborate on Analytical Engine in Proyekto.

Open your invitation:
https://app.proyekto.test/freelancer/invites

Project:
Analytical Engine
Role: Lead Engineer

Personal note: Would love your help on the punch-card pipeline.

If you do not have an account yet, sign up first with this email address and your invitation will be waiting for you.
If the button does not work, copy and paste the link above into your browser.

You received this email because someone invited you to a project on Proyekto."
`;

exports[`branded email templates buildInviteEmail renders a minimal invitation (no position, message or avatar): html 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Project invitation</title>
  </head>
  <body style="margin:0;padding:0;background-color:#f1f5f9;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Ada Lovelace invited you to join Analytical Engine on Proyekto.</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#f1f5f9;padding:28px 12px;">
      <tr>
        <td align="center">
          <table width="600" cellpadding="0" cellspacing="0" role="presentation" style="width:600px;max-width:600px;background-color:#ffffff;border:1px solid #e2e8f0;border-radius:14px;overflow:hidden;">
            <tr>
              <td style="padding:26px 32px;background-color:#0f172a;">
                <p style="margin:0 0 14px;color:#93c5fd;font-size:12px;font-weight:700;letter-spacing:.08em;text-transform:uppercase;">Proyekto</p>
                <h1 style="margin:0 0 16px;color:#ffffff;font-size:28px;line-height:1.2;font-weight:700;">You are invited to collaborate</h1>
                <table cellpadding="0" cellspacing="0" role="presentation"><tr>
                  <td style="padding-right:12px;vertical-align:middle;"><span style="display:inline-block;width:44px;height:44px;border-radius:50%;background-color:#2563eb;color:#ffffff;font-size:20px;font-weight:700;line-height:44px;text-align:center;vertical-align:middle;">A</span></td>
                  <td style="vertical-align:middle;">
                    <p style="margin:0;color:#cbd5e1;font-size:15px;line-height:1.5;">
                      <strong style="color:#ffffff;">Ada Lovelace</strong> invited you to join<br />
                      <strong style="color:#ffffff;">Analytical Engine</strong>.
                    </p>
                  </td>
                </tr></table>
              </td>
            </tr>
            <tr>
              <td style="padding:30px 32px;">
                <p style="margin:0 0 18px;color:#334155;font-size:15px;line-height:1.6;">
                  Open your invitation to review the project and start collaborating.
                </p>
                <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 22px;background-color:#f8fafc;border:1px solid #e2e8f0;border-radius:10px;">
                  <tr>
                    <td style="padding:16px 18px;">
                      <p style="margin:0 0 4px;color:#64748b;font-size:12px;font-weight:700;letter-spacing:.06em;text-transform:uppercase;">Project</p>
                      <p style="margin:0;color:#0f172a;font-size:16px;line-height:1.5;font-weight:700;">Analytical Engine</p>
                      
                    </td>
                  </tr>
                </table>
                
                <div style="margin:30px 0;text-align:center;">
                  <a href="https://app.proyekto.test/freelancer/invites" style="display:inline-block;padding:14px 28px;background-color:#2563eb;color:#ffffff;font-size:15px;font-weight:700;text-decoration:none;border-radius:10px;">Open Invitation</a>
                </div>
                <p style="margin:0 0 12px;color:#475569;font-size:13px;line-height:1.6;">
                  If you do not have an account yet, sign up first with this email address and your invitation will be waiting for you.
                </p>
                <p style="margin:0 0 8px;color:#64748b;font-size:12px;line-height:1.5;">Button not working? Copy and paste this link:</p>
                <p style="margin:0;line-height:1.6;">
                  <a href="https://app.proyekto.test/freelancer/invites" style="color:#1d4ed8;font-size:12px;text-decoration:underline;word-break:break-all;">https://app.proyekto.test/freelancer/invites</a>
                </p>
              </td>
            </tr>
            <tr>
              <td style="padding:18px 24px;background-color:#f8fafc;border-top:1px solid #e2e8f0;text-align:center;">
                <p style="margin:0;color:#94a3b8;font-size:12px;line-height:1.5;">
                  You received this email because someone invited you to a project on Proyekto.
                </p>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>"
`;

exports[`branded email templates buildInviteEmail renders a minimal invitation (no position, message or avatar): subject 1`] = `"Ada Lovelace invited you to collaborate on Analytical Engine"`;

exports[`branded email templates buildInviteEmail renders a minimal invitation (no position, message or avatar): text 1`] = `
"Ada Lovelace invited you to collaborate on Analytical Engine in Proyekto.

Open your invitation:
https://app.proyekto.test/freelancer/invites

Project:
Analytical Engine

If you do not have an account yet, sign up first with this email address and your invitation will be waiting for you.
If the button does not work, copy and paste the link above into your browser.

You received this email because someone invited you to a project on Proyekto."
`;

exports[`branded email templates buildInvoiceEmailHtml escapes markup in the provider name 1`] = `
"<!doctype html>
<html>
  <head><meta charset="utf-8" /><title>Invoice INV-2026-0001</title></head>
  <body style="margin:0;padding:0;background-color:#f1f5f9;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Invoice INV-2026-0001 for USD 4,200.50, due September 1, 2026</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#f1f5f9;padding:28px 12px;">
      <tr><td align="center">
        <table width="600" cellpadding="0" cellspacing="0" role="presentation" style="width:600px;max-width:600px;background-color:#ffffff;border:1px solid #e2e8f0;border-radius:14px;overflow:hidden;">
          <tr>
            <td style="padding:26px 32px;background-color:#0f172a;">
              <p style="margin:0 0 14px;color:#93c5fd;font-size:12px;font-weight:700;letter-spacing:.08em;text-transform:uppercase;">Proyekto</p>
              <h1 style="margin:0 0 8px;color:#ffffff;font-size:26px;line-height:1.2;font-weight:700;">Invoice INV-2026-0001</h1>
              <p style="margin:0;color:#cbd5e1;font-size:15px;line-height:1.5;">from <strong style="color:#ffffff;">&lt;script&gt;alert(1)&lt;/script&gt;</strong></p>
            </td>
          </tr>
          <tr>
            <td style="padding:30px 32px;">
              <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 22px;background-color:#f8fafc;border:1px solid #e2e8f0;border-radius:10px;">
                <tr><td style="padding:16px 18px;">
                  <table width="100%" cellpadding="0" cellspacing="0" role="presentation">
                    
    <tr>
      <td style="padding:6px 0;color:#64748b;font-size:13px;">Amount due</td>
      <td style="padding:6px 0;color:#0f172a;font-size:13px;font-weight:600;text-align:right;">USD 4,200.50</td>
    </tr>
                    
    <tr>
      <td style="padding:6px 0;color:#64748b;font-size:13px;">Due date</td>
      <td style="padding:6px 0;color:#0f172a;font-size:13px;font-weight:600;text-align:right;">September 1, 2026</td>
    </tr>
                    
    <tr>
      <td style="padding:6px 0;color:#64748b;font-size:13px;">Period covered</td>
      <td style="padding:6px 0;color:#0f172a;font-size:13px;font-weight:600;text-align:right;">August 1, 2026 – August 31, 2026</td>
    </tr>
                  </table>
                </td></tr>
              </table>
              <p style="margin:0 0 18px;color:#334155;font-size:15px;line-height:1.6;">You can view and download the full invoice from your project.</p>
              <div style="margin:26px 0;text-align:center;">
                <a href="https://app.proyekto.test/invoices/inv-1" style="display:inline-block;padding:14px 28px;background-color:#2563eb;color:#ffffff;font-size:15px;font-weight:700;text-decoration:none;border-radius:10px;">View invoice</a>
              </div>
              
              <p style="margin:0 0 8px;color:#64748b;font-size:12px;line-height:1.5;">Button not working? Copy and paste this link:</p>
              <p style="margin:0;line-height:1.6;">
                <a href="https://app.proyekto.test/invoices/inv-1" style="color:#1d4ed8;font-size:12px;text-decoration:underline;word-break:break-all;">https://app.proyekto.test/invoices/inv-1</a>
              </p>
            </td>
          </tr>
          <tr>
            <td style="padding:18px 24px;background-color:#f8fafc;border-top:1px solid #e2e8f0;text-align:center;">
              <p style="margin:0;color:#94a3b8;font-size:12px;line-height:1.5;">You received this email because an invoice was issued to you on Proyekto.</p>
            </td>
          </tr>
        </table>
      </td></tr>
    </table>
  </body>
</html>"
`;

exports[`branded email templates buildInvoiceEmailHtml renders with an attachment 1`] = `
"<!doctype html>
<html>
  <head><meta charset="utf-8" /><title>Invoice INV-2026-0001</title></head>
  <body style="margin:0;padding:0;background-color:#f1f5f9;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Invoice INV-2026-0001 for USD 4,200.50, due September 1, 2026</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#f1f5f9;padding:28px 12px;">
      <tr><td align="center">
        <table width="600" cellpadding="0" cellspacing="0" role="presentation" style="width:600px;max-width:600px;background-color:#ffffff;border:1px solid #e2e8f0;border-radius:14px;overflow:hidden;">
          <tr>
            <td style="padding:26px 32px;background-color:#0f172a;">
              <p style="margin:0 0 14px;color:#93c5fd;font-size:12px;font-weight:700;letter-spacing:.08em;text-transform:uppercase;">Proyekto</p>
              <h1 style="margin:0 0 8px;color:#ffffff;font-size:26px;line-height:1.2;font-weight:700;">Invoice INV-2026-0001</h1>
              <p style="margin:0;color:#cbd5e1;font-size:15px;line-height:1.5;">from <strong style="color:#ffffff;">Acme Studio</strong></p>
            </td>
          </tr>
          <tr>
            <td style="padding:30px 32px;">
              <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 22px;background-color:#f8fafc;border:1px solid #e2e8f0;border-radius:10px;">
                <tr><td style="padding:16px 18px;">
                  <table width="100%" cellpadding="0" cellspacing="0" role="presentation">
                    
    <tr>
      <td style="padding:6px 0;color:#64748b;font-size:13px;">Amount due</td>
      <td style="padding:6px 0;color:#0f172a;font-size:13px;font-weight:600;text-align:right;">USD 4,200.50</td>
    </tr>
                    
    <tr>
      <td style="padding:6px 0;color:#64748b;font-size:13px;">Due date</td>
      <td style="padding:6px 0;color:#0f172a;font-size:13px;font-weight:600;text-align:right;">September 1, 2026</td>
    </tr>
                    
    <tr>
      <td style="padding:6px 0;color:#64748b;font-size:13px;">Period covered</td>
      <td style="padding:6px 0;color:#0f172a;font-size:13px;font-weight:600;text-align:right;">August 1, 2026 – August 31, 2026</td>
    </tr>
                  </table>
                </td></tr>
              </table>
              <p style="margin:0 0 18px;color:#334155;font-size:15px;line-height:1.6;">The full invoice is attached to this email as a PDF.</p>
              <div style="margin:26px 0;text-align:center;">
                <a href="https://app.proyekto.test/invoices/inv-1" style="display:inline-block;padding:14px 28px;background-color:#2563eb;color:#ffffff;font-size:15px;font-weight:700;text-decoration:none;border-radius:10px;">View invoice</a>
              </div>
              
              <p style="margin:0 0 8px;color:#64748b;font-size:12px;line-height:1.5;">Button not working? Copy and paste this link:</p>
              <p style="margin:0;line-height:1.6;">
                <a href="https://app.proyekto.test/invoices/inv-1" style="color:#1d4ed8;font-size:12px;text-decoration:underline;word-break:break-all;">https://app.proyekto.test/invoices/inv-1</a>
              </p>
            </td>
          </tr>
          <tr>
            <td style="padding:18px 24px;background-color:#f8fafc;border-top:1px solid #e2e8f0;text-align:center;">
              <p style="margin:0;color:#94a3b8;font-size:12px;line-height:1.5;">You received this email because an invoice was issued to you on Proyekto.</p>
            </td>
          </tr>
        </table>
      </td></tr>
    </table>
  </body>
</html>"
`;

exports[`branded email templates buildInvoiceEmailHtml renders with no due date or period 1`] = `
"<!doctype html>
<html>
  <head><meta charset="utf-8" /><title>Invoice INV-2026-0001</title></head>
  <body style="margin:0;padding:0;background-color:#f1f5f9;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Invoice INV-2026-0001 for USD 4,200.50</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#f1f5f9;padding:28px 12px;">
      <tr><td align="center">
        <table width="600" cellpadding="0" cellspacing="0" role="presentation" style="width:600px;max-width:600px;background-color:#ffffff;border:1px solid #e2e8f0;border-radius:14px;overflow:hidden;">
          <tr>
            <td style="padding:26px 32px;background-color:#0f172a;">
              <p style="margin:0 0 14px;color:#93c5fd;font-size:12px;font-weight:700;letter-spacing:.08em;text-transform:uppercase;">Proyekto</p>
              <h1 style="margin:0 0 8px;color:#ffffff;font-size:26px;line-height:1.2;font-weight:700;">Invoice INV-2026-0001</h1>
              <p style="margin:0;color:#cbd5e1;font-size:15px;line-height:1.5;">from <strong style="color:#ffffff;">Acme Studio</strong></p>
            </td>
          </tr>
          <tr>
            <td style="padding:30px 32px;">
              <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 22px;background-color:#f8fafc;border:1px solid #e2e8f0;border-radius:10px;">
                <tr><td style="padding:16px 18px;">
                  <table width="100%" cellpadding="0" cellspacing="0" role="presentation">
                    
    <tr>
      <td style="padding:6px 0;color:#64748b;font-size:13px;">Amount due</td>
      <td style="padding:6px 0;color:#0f172a;font-size:13px;font-weight:600;text-align:right;">USD 4,200.50</td>
    </tr>
                    
                    
                  </table>
                </td></tr>
              </table>
              <p style="margin:0 0 18px;color:#334155;font-size:15px;line-height:1.6;">You can view and download the full invoice from your project.</p>
              <div style="margin:26px 0;text-align:center;">
                <a href="https://app.proyekto.test/invoices/inv-1" style="display:inline-block;padding:14px 28px;background-color:#2563eb;color:#ffffff;font-size:15px;font-weight:700;text-decoration:none;border-radius:10px;">View invoice</a>
              </div>
              
              <p style="margin:0 0 8px;color:#64748b;font-size:12px;line-height:1.5;">Button not working? Copy and paste this link:</p>
              <p style="margin:0;line-height:1.6;">
                <a href="https://app.proyekto.test/invoices/inv-1" style="color:#1d4ed8;font-size:12px;text-decoration:underline;word-break:break-all;">https://app.proyekto.test/invoices/inv-1</a>
              </p>
            </td>
          </tr>
          <tr>
            <td style="padding:18px 24px;background-color:#f8fafc;border-top:1px solid #e2e8f0;text-align:center;">
              <p style="margin:0;color:#94a3b8;font-size:12px;line-height:1.5;">You received this email because an invoice was issued to you on Proyekto.</p>
            </td>
          </tr>
        </table>
      </td></tr>
    </table>
  </body>
</html>"
`;

exports[`branded email templates buildInvoiceEmailHtml renders without an attachment 1`] = `
"<!doctype html>
<html>
  <head><meta charset="utf-8" /><title>Invoice INV-2026-0001</title></head>
  <body style="margin:0;padding:0;background-color:#f1f5f9;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Invoice INV-2026-0001 for USD 4,200.50, due September 1, 2026</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#f1f5f9;padding:28px 12px;">
      <tr><td align="center">
        <table width="600" cellpadding="0" cellspacing="0" role="presentation" style="width:600px;max-width:600px;background-color:#ffffff;border:1px solid #e2e8f0;border-radius:14px;overflow:hidden;">
          <tr>
            <td style="padding:26px 32px;background-color:#0f172a;">
              <p style="margin:0 0 14px;color:#93c5fd;font-size:12px;font-weight:700;letter-spacing:.08em;text-transform:uppercase;">Proyekto</p>
              <h1 style="margin:0 0 8px;color:#ffffff;font-size:26px;line-height:1.2;font-weight:700;">Invoice INV-2026-0001</h1>
              <p style="margin:0;color:#cbd5e1;font-size:15px;line-height:1.5;">from <strong style="color:#ffffff;">Acme Studio</strong></p>
            </td>
          </tr>
          <tr>
            <td style="padding:30px 32px;">
              <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 22px;background-color:#f8fafc;border:1px solid #e2e8f0;border-radius:10px;">
                <tr><td style="padding:16px 18px;">
                  <table width="100%" cellpadding="0" cellspacing="0" role="presentation">
                    
    <tr>
      <td style="padding:6px 0;color:#64748b;font-size:13px;">Amount due</td>
      <td style="padding:6px 0;color:#0f172a;font-size:13px;font-weight:600;text-align:right;">USD 4,200.50</td>
    </tr>
                    
    <tr>
      <td style="padding:6px 0;color:#64748b;font-size:13px;">Due date</td>
      <td style="padding:6px 0;color:#0f172a;font-size:13px;font-weight:600;text-align:right;">September 1, 2026</td>
    </tr>
                    
    <tr>
      <td style="padding:6px 0;color:#64748b;font-size:13px;">Period covered</td>
      <td style="padding:6px 0;color:#0f172a;font-size:13px;font-weight:600;text-align:right;">August 1, 2026 – August 31, 2026</td>
    </tr>
                  </table>
                </td></tr>
              </table>
              <p style="margin:0 0 18px;color:#334155;font-size:15px;line-height:1.6;">You can view and download the full invoice from your project.</p>
              <div style="margin:26px 0;text-align:center;">
                <a href="https://app.proyekto.test/invoices/inv-1" style="display:inline-block;padding:14px 28px;background-color:#2563eb;color:#ffffff;font-size:15px;font-weight:700;text-decoration:none;border-radius:10px;">View invoice</a>
              </div>
              
              <p style="margin:0 0 8px;color:#64748b;font-size:12px;line-height:1.5;">Button not working? Copy and paste this link:</p>
              <p style="margin:0;line-height:1.6;">
                <a href="https://app.proyekto.test/invoices/inv-1" style="color:#1d4ed8;font-size:12px;text-decoration:underline;word-break:break-all;">https://app.proyekto.test/invoices/inv-1</a>
              </p>
            </td>
          </tr>
          <tr>
            <td style="padding:18px 24px;background-color:#f8fafc;border-top:1px solid #e2e8f0;text-align:center;">
              <p style="margin:0;color:#94a3b8;font-size:12px;line-height:1.5;">You received this email because an invoice was issued to you on Proyekto.</p>
            </td>
          </tr>
        </table>
      </td></tr>
    </table>
  </body>
</html>"
`;
